# bazel-rule-js-repro

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  package.json  pnpm-lock.yaml  resolved_deps.py
