load("@npm//:defs.bzl", "npm_link_all_packages")
load("@@aspect_rules_js~1.13.0~npm~npm__vite__4.0.3//:package_json.bzl", vite_bin = "bin")

# This macro expands to a link_npm_package for each third-party package in package.json
npm_link_all_packages(name = "node_modules")

vite_bin.vite_binary(
    name = "build",
    args = ["--help"],
)